<resources>
    <string name="app_name">Dicoding Submission 1</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="billgates">/@billgates</string>
    <string name="bill_gates">Bill Gates</string>
    <string name="jakarta_indonesia">Jakarta, Indonesia</string>
    <string name="_10_followers">Followers</string>
    <string name="_5_following">Following</string>
    <string name="_30_repository">Repository</string>
    <string name="dicoding_indonesia">Dicoding Indonesia</string>
    <string name="follow">Follow</string>
    <string name="_10">10</string>
    <string name="_8">8</string>
    <string name="_20">20</string>
    <string name="new_repository">New repository</string>
    <string name="list">List User</string>
    <string name="grid">Grid User</string>
    <string name="card">Card User</string>
    <string name="message">Message</string>
    <string name="cardView">CardView User</string>

    <string-array name="username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <string-array name="location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>

    <string-array name="repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </string-array>

    <string-array name="company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>

    <string-array name="followers">
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </string-array>

    <string-array name="following">
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </string-array>

    <string-array name="avatar">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
    </string-array>

    <string-array name="background">
        <item>@drawable/bg1</item>
        <item>@drawable/bg2</item>
        <item>@drawable/bg3</item>
        <item>@drawable/bg4</item>
        <item>@drawable/bg5</item>
        <item>@drawable/bg6</item>
        <item>@drawable/bg7</item>
        <item>@drawable/bg8</item>
        <item>@drawable/bg9</item>
        <item>@drawable/bg10</item>
    </string-array>
</resources>