<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    app:cardCornerRadius="5dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgViewAvatar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="192dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/name"
            android:textColor="#494646"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imgViewAvatar"
            app:layout_constraintTop_toTopOf="@+id/imgViewAvatar" />

        <TextView
            android:id="@+id/tvCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins"
            android:text="@string/company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.032"
            app:layout_constraintStart_toEndOf="@+id/imgViewAvatar"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <Button
            android:id="@+id/btnFollow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="168dp"
            android:background="#204362"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingLeft="35dp"
            android:paddingTop="8dp"
            android:paddingRight="35dp"
            android:paddingBottom="8dp"
            android:text="@string/follow"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/imgViewAvatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imgViewAvatar"
            app:layout_constraintTop_toBottomOf="@+id/tvCompany"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="#204362"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingLeft="35dp"
            android:paddingTop="8dp"
            android:paddingRight="35dp"
            android:paddingBottom="8dp"
            android:text="@string/message"
            android:textColor="#FFFFFF"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnFollow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btnFollow" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>